; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-nametree.c_pdf_lookup_name.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-nametree.c_pdf_lookup_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Root = common dso_local global i32 0, align 4
@Names = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @pdf_lookup_name(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32* @pdf_trailer(i32* %13, i32* %14)
  %16 = load i32, i32* @Root, align 4
  %17 = call i32* @PDF_NAME(i32 %16)
  %18 = call i32* @pdf_dict_get(i32* %12, i32* %15, i32* %17)
  store i32* %18, i32** %9, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32, i32* @Names, align 4
  %22 = call i32* @PDF_NAME(i32 %21)
  %23 = call i32* @pdf_dict_get(i32* %19, i32* %20, i32* %22)
  store i32* %23, i32** %10, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = call i32* @pdf_dict_get(i32* %24, i32* %25, i32* %26)
  store i32* %27, i32** %11, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = call i32* @pdf_lookup_name_imp(i32* %28, i32* %29, i32* %30)
  ret i32* %31
}

declare dso_local i32* @pdf_dict_get(i32*, i32*, i32*) #1

declare dso_local i32* @pdf_trailer(i32*, i32*) #1

declare dso_local i32* @PDF_NAME(i32) #1

declare dso_local i32* @pdf_lookup_name_imp(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
